maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:25: error: not found: type int
  def keepHandOnSideWall(etat1 : int) = Int {
                                 ^IslandMaze:25: error: Int.type does not take parameters
  def keepHandOnSideWall(etat1 : int) = Int {
                                            ^